manifests/kube-failover-webhook.yaml

apiVersion: v1
kind: Service
metadata:
 name: kube-failover-webhook
 namespace: kubevirt-system
 labels:
    app: kube-failover-webhook
spec:
 ports:
 - name: webhook
    port: 443
    targetPort: 8443
 selector:
    app: kube-failover-webhook
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
 name: kube-failover-webhook
 namespace: kubevirt-system
 labels:
    app: kube-failover-webhook
spec:
 replicas: 1
 template:
    metadata:
     name: kube-failover-webhook
     labels:
       app: kube-failover-webhook
    spec:
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - kube-failover-webhook
            topologyKey: kubernetes.io/hostname
    containers:
      - name: webhook
        image: kube-failover-webhook:latest # make sure to build and tag the image first!
        args:
         - -tlsCertFile=/etc/webhook/certs/cert.pem
         - -tlsKeyFile=/etc/webhook/certs/key.pem
        resources:
          limits:
            memory: 100Mi
            cpu: 500m
          requests:
            memory: 100Mi
            cpu: 500m
        volumeMounts:
          - name: webhook-certs
            mountPath: /etc/webhook/certs
            readOnly: true
        securityContext:
          readOnlyRootFilesystem: true
     volumes:
       - name: webhook-certs
         secret:
           secretName: kube-failover-webhook-certs
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: kube-failover-webhook
  labels:
    app: kube-failover-webhook
webhooks:
- name: network-hook.hypernet-local-agent-system.svc.cluster.local
  clientConfig:
    service:
      name: network-hook-svc
      namespace: kubevirt-system
      path: "/mutate"
    caBundle: <CA_BUNDLE>
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
